# mtbls-mhd-integration

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.yaml  example.env  pyproject.toml
.github/workflows/: python-publish.yml
mtbls2mhd/: __init__.py  config.py  convertor_factory.py  cv_mapping_table.csv  cv_mappings.csv
mtbls2mhd/commands/: cli.py  create_mhd_file.py  fetch_mtbls_study.py  output_paths.py
mtbls2mhd/utils/: cv_term_creator.py
mtbls2mhd/v0_1/: convertor.py  db_metadata_collector.py  mtbls_study_schema.py
mtbls2mhd/v0_1/cv/: cv_mapping_table.csv
mtbls2mhd/v0_1/legacy/: builder.py  convertor.py  db_metadata_collector.py  folder_metadata_collector.py
mtbls2mhd/v0_1/ms/: convertor.py
scripts/: create_mhd_file.py  utils.py
tests/mhd_announcement/legacy/: MTBLS30008993.announcement.json  MTBLS30008997.announcement.json
tests/mhd_dataset/: MHD000000.mhd.json  MHDT003107.mhd.json  MTBLS2.mhd.json  MTBLS3.mhd.json  MTBLS30008978.mhd.json  MTBLS30008982.mhd.json  MTBLS30008987.mhd.json  MTBLS30008993.mhd.json  MTBLS30008997.mhd.json  MTBLS3107.mhd.json  REQ20251203215173.mhd.json  REQ202602083000317.mhd.json
tests/mhd_legacy/: MTBLS2.announcement.json  MTBLS2.mhd.json  MTBLS3.announcement.json  MTBLS3.mhd.json  MTBLS4.announcement.json  MTBLS4.mhd.json  MTBLS5.announcement.json  MTBLS5.mhd.json  MTBLS6.announcement.json  MTBLS6.mhd.json  MTBLS7.announcement.json  MTBLS7.mhd.json  MTBLS8.announcement.json  MTBLS8.mhd.json
tests/mtbls2mhd/: test_cli_commands.py
tests/mtbls_model/: MTBLS3_model.json  MTBLS4_model.json  MTBLS5_model.json  MTBLS6_model.json  MTBLS7_model.json  MTBLS8_model.json
