[project]
name = "mtbls-mhd-integration"
version = "0.0.1"
description = "MetaboLights = Metabolomics Hub Integration"
authors = [{"name" = "MetaboLights Team", "email" = "metabolights-help@ebi.ac.uk"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "metabolights-utils>=1.4.15",
    "mhd-model>=0.1.34",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]


[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "import-linter>=2.3",
    "mkdocs-material>=9.5.49",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[project.scripts]
mtbls-mhd-cli = "mtbls2mhd.commands.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mtbls2mhd*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"mtbls2mhd" = ["**/*.json"]


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version = "0.0.13"
tag_format = "v$major.$minor.$patch"
version_files = [
    "pyproject.toml:version",
    "mtbls2mhd/__init__.py:__version__",
]
bump_message = "bump: version $current_version -> $new_version"
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = "-ra -q -v"
testpaths = [
    "tests"
]


[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "G", "SLF", "PTH", "Q", "T"]
ignore = [ "ANN401"]

fixable = ["ALL"]



[tool.importlinter]
include_external_packages = true
root_packages = ["mtbls2mhd"]
