[project]
name = "mtbls-mhd-integration"
version = "0.0.43"
description = "MetaboLights - MetabolomicsHub Integration"
authors = [{"name" = "MetaboLights Team", "email" = "metabolights-help@ebi.ac.uk"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx2>=2.2.0",
    "metabolights-utils>=1.4.34",
    "mhd-model>=0.1.89",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "urllib3>=2.7.0",
]


[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "import-linter>=2.3",
    "pre-commit>=4.2.0",
    "ruff>=0.15.10",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
docs = [
    "mkdocs-material>=9.5.49",
    "pymdown-extensions>=10.21.3"
]

[tool.uv]
default-groups = []


[project.scripts]
mtbls-mhd-cli = "mtbls2mhd.commands.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mtbls2mhd*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"mtbls2mhd" = ["**/*.json", "**/*.tsv", "**/*.csv"]


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version = "0.0.433"
tag_format = "v$major.$minor.$patch"
version_files = [
    "pyproject.toml:version",
    "mtbls2mhd/__init__.py:__version__",
]
bump_message = "bump: version $current_version -> $new_version"
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = "-ra -q -v"
testpaths = [
    "tests"
]


[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "G", "SLF", "PTH", "Q", "T"]
ignore = [ "ANN401"]

fixable = ["ALL"]



[tool.importlinter]
include_external_packages = true
root_packages = ["mtbls2mhd"]
